# cpp-practice

./: .gitignore  vcpkg.json
1-arithmetic/: main.cpp
1.5-arithmetic-tui/: CMakeLists.txt  CMakePresets.json  main.cpp
2-library/: main.cpp
2.5-library-tui/: CMakeLists.txt  main.cpp
3-sentences/: main.cpp
3.5-sentences/: CMakeLists.txt  CMakePresets.json  main.cpp
4-change-counter/: main.cpp
5-sums-and-averages/: main.cpp
6-is-palindrome/: main.cpp
7-points/: main.cpp
8-list/: list.cpp  list.hpp  main.cpp
